testing/syntax-error/python/syntax-error1.py
# Raspberry Pi Foundation
# Developed to be used alongside Isaac Computer Science,
# part of the National Centre for Computing Education
# Usage licensed under CC BY-SA 4
# https://isaaccomputerscience.org/concepts/prog_softeng_debug

user_name = input("Please enter your name: "
print (user_name)
